[tool.poetry]
name = "mastodonasyncapi"
version = "0.1.0"
description = ""
authors = ["Andrii Yashchishen <AndriiYashchishen@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
