[tool.poetry]
name = "mammoth"
version = "0.1.0"
description = "Async python library for work with mastodon API"
authors = ["Andrii Yashchishen <AndriiYashchishen@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.2"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
